// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton in Dark Theme renders Checked 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option1"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option2"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option3"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Dark Theme renders Default 1`] = `
<span
  className="flex"
>
  <label
    className="flex flex-row flex-start items-center cursor-pointer group"
  >
    <span
      className="block h-4 w-4 relative me-3"
    >
      <input
        className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span
        className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
      />
      <span
        className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
      />
    </span>
  </label>
</span>
`;

exports[`RadioButton in Dark Theme renders Disabled 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled1"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled2"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled Checked
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Dark Theme renders NoLabel 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel1"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel2"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel3"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Dark Theme renders ReadOnly 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly1"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly2"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly Checked
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Dark Theme renders WithLabel 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel1"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel2"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel3"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Light Theme renders Checked 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option1"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option2"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option3"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Light Theme renders Default 1`] = `
<span
  className="flex"
>
  <label
    className="flex flex-row flex-start items-center cursor-pointer group"
  >
    <span
      className="block h-4 w-4 relative me-3"
    >
      <input
        className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span
        className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
      />
      <span
        className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
      />
    </span>
  </label>
</span>
`;

exports[`RadioButton in Light Theme renders Disabled 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled1"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled2"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled Checked
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Light Theme renders NoLabel 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel1"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel2"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel3"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Light Theme renders ReadOnly 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly1"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly2"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly Checked
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in Light Theme renders WithLabel 1`] = `
Array [
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel1"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel2"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>,
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel3"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>,
]
`;

exports[`RadioButton in RTL renders Checked 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option1"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option2"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="option3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          checked={false}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="option3"
          name="option"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="option3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>
</div>
`;

exports[`RadioButton in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>
</div>
`;

exports[`RadioButton in RTL renders Disabled 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled1"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group opacity-30 cursor-not-allowed select-none"
      htmlFor="disabled2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Disabled Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          disabled={true}
          id="disabled2"
          name="disabled"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="disabled2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Disabled Checked
      </span>
    </label>
  </span>
</div>
`;

exports[`RadioButton in RTL renders NoLabel 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel1"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel2"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="noLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="noLabel3"
          name="noLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="noLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
    </label>
  </span>
</div>
`;

exports[`RadioButton in RTL renders ReadOnly 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly1"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group cursor-not-allowed select-none"
      htmlFor="readOnly2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="ReadOnly Checked"
          checked={true}
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="readOnly2"
          name="readOnly"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="readOnly2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        ReadOnly Checked
      </span>
    </label>
  </span>
</div>
`;

exports[`RadioButton in RTL renders WithLabel 1`] = `
<div
  dir="rtl"
>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel1"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 1"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel1"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel1"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 1
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel2"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 2"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel2"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel2"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 2
      </span>
    </label>
  </span>
  <span
    className="flex"
  >
    <label
      className="flex flex-row flex-start items-center cursor-pointer group"
      htmlFor="withLabel3"
    >
      <span
        className="block h-4 w-4 relative me-3"
      >
        <input
          aria-label="Option 3"
          className="block appearance-none h-4 w-4  rounded-full cursor-pointer focus:outline-none shadow-[0_0_0_1px_inset] peer shadow-trunks checked:shadow-piccolo"
          id="withLabel3"
          name="withLabel"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="withLabel3"
        />
        <span
          className="h-2 w-2 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] bg-piccolo scale-0 transition-transform peer-checked:scale-100"
        />
        <span
          className="w-6 h-6 rounded-full absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] transition-colors group-hover:bg-trunks/[.12] group-hover:peer-checked:bg-piccolo/[.12]"
        />
      </span>
      <span
        className="text-bulma text-moon-14"
      >
        Option 3
      </span>
    </label>
  </span>
</div>
`;
